--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,3 +33,13 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: CopyFiles@2
+  inputs:
+    contents: 'artifa/**'
+    targetFolder: $(Build.ArtifactStagingDirectory)
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'dateFromBuild'
+    publishLocation: 'Container'
+    StoreAsTar: true
