Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -14,7 +14,10 @@ resources:
     trigger: true # Run app-ci pipeline when any run of security-lib-ci completes
 
 
-pool: Self agent test
+pool: 
+  name: Self agent test
+  demands:
+    - agent -equals 2
 
 steps:
 - script: echo Hello, world!
