Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,8 @@ steps:
   inputs:
     script: |
       mkdir artifa
-      mv pipedate artifa
+      mv pipedateForFirst artifa
+      mv pipedateForSecound artifa
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
