--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -44,6 +44,6 @@ steps:
   inputs:
     script: |
       echo Write your commands here
-      ls -la $System.ArtifactsDirectory
-      cd $System.ArtifactsDirectory
+      ls -la $(System.ArtifactsDirectory)
+      cd $(System.ArtifactsDirectory)
       pwd
