--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -44,7 +44,7 @@ steps:
   inputs:
     script: |
       echo Write your commands here
-      ls -la $System.ArtifactsDirectory
-      cd $System.ArtifactsDirectory
+      ls -la $(System.ArtifactsDirectory)
+      cd $(System.ArtifactsDirectory)
       pwd
 
