--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -35,16 +35,16 @@ steps:
     downloadPath: '$(System.ArtifactsDirectory)'
     cleanDestinationFolder: true
     
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+# - script: |
+#     echo Add other tasks to build, test, and deploy your project.
+#     echo See https://aka.ms/yaml
+#   displayName: 'Run a multi-line script'
 
 - task: CmdLine@2
   inputs:
     script: |
       echo Write your commands here
-      ls -la $(System.ArtifactsDirectory)
-      cd $(System.ArtifactsDirectory)
+      ls -la $(System.ArtifactsDirectory)/dateFromBuild
+      cd $(System.ArtifactsDirectory)/dateFromBuild
       pwd
 
