--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -56,7 +56,8 @@ steps:
     script: |
       echo Write your commands here
       mkdir art
-      echo Pipeline-1, buildnumber $(Build.BuildNumber) >> artifa/pipedateForFirst     
+      echo Pipeline-1, buildnumber $(Build.BuildNumber) >> artifa/pipedateForFirst    
+      cat artifa/pipedateForFirst 
       mv artifa/pipedateForFirst art
  
 
