--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -56,6 +56,7 @@ steps:
       echo Write your commands here
       mkdir art
       echo Pipeline-2, buildnumber $(Build.BuildNumber)	>> artifa/pipedateForSecound
+      cat artifa/pipedateForSecound
       mv artifa/pipedateForSecound art
 
 - task: CopyFiles@2
