--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -70,12 +70,13 @@ steps:
     publishLocation: 'Container'
     StoreAsTar: true
 
+
 - task: UniversalPackages@0
   inputs:
-    command: 'download'
-    downloadDirectory: '$(Build.ArtifactStagingDirectory)'
-    feedsToUse: 'internal'
-    vstsFeed: '253737b6-70b9-419e-9e58-61db393e8ed9'
-    vstsFeedPackage: 'artifactParallelSecound'
-    vstsPackageVersion: '1.1'
-    verbosity: 'Trace'    
+    command: 'publish'
+    publishDirectory: '$(Build.ArtifactStagingDirectory)'
+    feedsToUsePublish: 'internal'
+    vstsFeedPublish: '253737b6-70b9-419e-9e58-61db393e8ed9'
+    vstsFeedPackagePublish: 'TextArchive2'
+    versionOption: 'patch'
+    verbosity: 'Trace'
